cachepuppy_core/k8/service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: cachepuppy-public
  namespace: cachepuppy
spec:
  selector:
    app: cachepuppy-core
  ports:
    - name: http
      port: 80
      targetPort: http
